# Metodyki-projektowania-i-modelowania-system-w-1

Speedometer/: CMakeLists.txt  sdkconfig
Speedometer/components/adc_sensor/: CMakeLists.txt  adc_sensor.c
Speedometer/components/adc_sensor/include/: adc_sensor.h
Speedometer/components/nimBLE/: CMakeLists.txt  nimBLE.c
Speedometer/components/nimBLE/include/: nimBLE.h
Speedometer/main/: CMakeLists.txt  Speedometer.c
android_app/Ble.Client/Views/: BtCharPage.xaml  BtCharPage.xaml.cs
